broken css rule fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,6 @@
   }
   
   .one {
-    background-image: url("\img\steve_profile.jpg");
+    background-image: url("/img/steve_profile.jpg");
   }
   
